--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
