--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
+    "next-navigation": "^1.0.6",
     "nodemailer": "^6.9.13",
     "prisma": "^5.13.0",
     "react": "^18",
