--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.32.0",
@@ -20,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "geist": "^1.3.0",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
